[tool.poetry]
name = "my_agent"
version = "0.1.0"
description = ""
authors = ["oooo12-git <jhdmbwy12@gmail.com>"]
packages = [
    { include = "my_agent" },
]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.50"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
fredapi = "^0.5.2"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
langchain-teddynote = "^0.3.37"
langchain-openai = "^0.2.11"
yahooquery = "^2.3.7"
deep-translator = "^1.11.4"
langchain-community = "^0.3.10"
langgraph = "^0.2.57"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
